Fix Issue #7 in github -- fix CSS to properly handle case where URL and buttons overlap (or come close to doing so).

--- a/RSSMenu.safariextension/styles.css
+++ b/RSSMenu.safariextension/styles.css
@@ -58,9 +58,13 @@
 }
 
 .rssmenu-url {
-	float: left !important;
+	position: absolute !important;
+	left: 28px !important;
 	padding-left: 4px !important;
 	padding-top: 2px !important;
+	
+	white-space: nowrap !important;
+	overflow:hidden !important;
 }
 
 .rssmenu-url a:link {
@@ -73,7 +77,7 @@
 	float:right !important;
 	padding-right: 4px !important;
 	position: relative !important;
-	width:50% !important;
+	width:75% !important;
 
 }
 
@@ -111,6 +115,7 @@
 	background-image: -webkit-linear-gradient(top, #ccc, #fff) !important; 
 }
 
+/* See http://coding.smashingmagazine.com/2012/08/20/towards-retina-web/ for retina-friendly tips */
 .rssmenu-closebtn {
   display: inline-block !important;
   padding: 2px 4px !important;
